[Spring 지하철 노선도 - 1, 2단계]  에덴(김성산) 미션 제출합니다. (#202)
* docs(README.md): 기능 구현 목록 작성

* feat: 지하철역 생성 시 이미 등록된 이름에 대한 요청이 오면 에러 응답하는 기능 구현

* feat: 지하철 노선 생성 기능 로직 구현

* feat: 지하철 노선 중복 이름 생성 요청시 에러 응답 기능 구현

* feat: 지하철 노선 전부 삭제하는 Dao 로직 구현

* feat: 지하철 노선 목록 조회 API 구현

* feat: 지하철 노선 조회 API 구현

* feat: 지하철 노선 수정 API 구현

* feat: 지하철 노선 삭제 API 구현

* test: 존재하지 않는 Id로 요청을 하는 것에 대한 테스트 케이스 추가

* docs(README.md): 2단계 요구사항 목록 추가

* chore: DB 스키마 생성 및 설정 파일 추가

* refactor: 직접 관리하던 객체를 스프링 컨테이너가 관리할 수 있도록 수정

* refactor(StationDao): Spring Jdbc로 전환

* refactor(LineDao): Spring Jdbc로 전환

* feat: 전역적으로 예외 핸들링하는 Controller Advice 생성

* refactor(StationController): 컨트롤러에 있던 비즈니스 로직을 서비스 계층으로 이전

* refactor(LineController): 컨트롤러에 있던 비즈니스 로직을 서비스 계층으로 이전

* refactor(service): `@Transactional` 을 붙여 원자성 보장

* refactor: 공통된 메서드 분리

* refactor: 사용하지 않는 메서드 제거

* refactor: 노선 수정시 중복된 이름 검증 로직 추가

* refactor: 불필요한 주석 제거

* refactor: 중복되는 테스트용 변수 Fixture 로 이동

* test: 서비스 레이어 테스트 추가

* refactor: 불필요한 produces 옵션 제거

* test: 예외 던지는 케이스 인수 테스트에서 추가

* refactor: Checked Exception에 대한 예외 처리 추가

Co-authored-by: EastHShin <xldk78@gmail.com>